# quokka-interpreter

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  compiler.c  file_utils.c  file_utils.h  lexer.c  test.tu  transpiler.h
docs/: DOCUMENTATION.md  FEATURES.md
include/: backend.h  evaluator.h  file_utils.h  garbage_collector.h  lexer.h  parser.h  token.h
include/features/: hashmap.h  list.h  std.h
include/utils/: call_stack.h  hash_table.h  pair.h
quokka/: bike.qk  class_within.qk  hashmaps.qk  test.qk
src/: backend.c  compiler.c  evaluator.c  file_utils.c  garbage_collector.c  interpreter.c  lexer.c  parser.c  token.c  transpiler.c
src/features/: hashmap.c  list.c  std.c
src/utils/: call_stack.c  hash_table.c
